*** 19991017_1 by lusky
revved patchlevel to b111
commented about NO_JOIN_ON_SPLIT being broken in config.h
removed (+) cruft from idented clients as this was a Tanerism (db)
fixed missing mask check in IP kline code (db)


*** 19991013_5 by lusky
revved patchlevel.h to b110
fixed m_ison to put trailing space on 303 responses
CONNECTFAST is always defined for USE_POLL now, was causing very poor
  accept performance on heavily loaded non-Solaris machines using poll()


*** 19991013_4 by lusky
syncd config.h.dist to config.h


*** 19991013_3 by lusky
added display of logLevel as a string in /set log (db)
updated opers.txt to include set log


*** 19991013_2 by lusky
backported set log from -7, really needs to be here


*** 19991013_1 by lusky
revved patchlevel to b109
fixed botched wild card matching for K/I lines (db)
added INIT_LOG_LEVEL to config.h


*** 19991011_1 by lusky
cptr->fd is <0 in some cases when its being used in send.c (db)


*** 19991010_1 by lusky
fixed bogus strncpy in s_conf.c report by Q (th)


*** 19991009_3 by lusky
updated RELNOTES to indicate that AIX is unsupported


*** 19991009_2 by lusky
revved patchlevel to b108
fixed -DNDEBUG in Makefile.in (th)
fix for resolver blocking on Linux 2.0 /libc5 (th)
workaround for broken poll() in Linux 2.0 / libc5 (th)


*** 19991009_1 by lusky
added -DNDEBUG back to CFLAGS (jl)
put channel topic back before names (db)
another umode hack fix (db)
fixed a broken cast for IRIX (jl)


*** 19990928_1 by lusky
another +o hack fix (db)


*** 19990927_1 by lusky
This patch corrects a case where a normal user can oper themselves (db)
also corrects a possible core due to a bogus H or L line. (neph)


*** 19990911_1 by lusky
another bogus fd check in send.c


*** 19990910_2 by lusky
removed an exit that shouldn't have been there


*** 19990910_1 by lusky
revved patchlevel to b107
user sys/poll.h instead of poll.h


*** 19990909_2 by lusky
corrected error in ChangeLog


*** 19990909_1 by lusky